--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Next.js Explorer",
-  "description": "Quickly check if a webpage is built with Next.js and explore static properties and other useful metrics.",
+  "name": "Next.js Explorer - NextJS App & Pages Router",
+  "description": "Quickly check if a webpage is built with Next.js and explore static properties and other related NextJS useful metrics.",
   "version": "1.5.0",
   "icons": {
     "16": "public/images/icon-16.png",
@@ -26,7 +26,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Click to explore Next.js page properties or open the web inspector to get Next.js metrics",
+    "default_title": "Click to explore Next.js page properties or open the web inspector to get NextJS metrics",
     "default_icon": {
       "16": "public/images/icon-16.png",
       "32": "public/images/icon-32.png",
