--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@uiw/react-json-view": "^2.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-tree": "^0.18.0",
+    "react-json-view-lite": "^1.3.0",
     "react-scripts": "5.0.1",
     "webextension-polyfill": "^0.10.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "watch": "webpack -w --config webpack.config.js"
+    "build": "NODE_ENV=prod webpack --config webpack.config.js",
+    "watch": "NODE_ENV=dev webpack -w --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
