--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@uiw/react-json-view": "^2.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-json-tree": "^0.18.0",
-    "react-json-view-lite": "^1.3.0",
-    "react-scripts": "5.0.1",
     "webextension-polyfill": "^0.10.0"
   },
   "scripts": {
-    "build": "NODE_ENV=prod webpack --config webpack.config.js",
-    "watch": "NODE_ENV=dev webpack -w --config webpack.config.js"
+    "build:chrome": "DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
+    "watch:chrome": "DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
+    "build:firefox": "DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
+    "watch:firefox": "DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +39,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
-    "ts-node": "^10.9.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
