--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "nextreact-chrome-ext",
+  "name": "next-js-browser-extension",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webextension-polyfill": "^0.10.0"
@@ -11,7 +12,11 @@
     "build:chrome": "DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
     "watch:chrome": "DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
     "build:firefox": "DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
-    "watch:firefox": "DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js"
+    "watch:firefox": "DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint --fix ./src",
+    "stylelint": "stylelint '**/*.css'",
+    "stylelint:fix": "stylelint --fix '**/*.css'"
   },
   "eslintConfig": {
     "extends": [
@@ -35,11 +40,17 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
+    "@eslint/js": "^9.8.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.8.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
