--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "webextension-polyfill": "^0.12.0"
   },
   "scripts": {
-    "build": "rm -rf ./dist && npm run build:chrome && npm run build:firefox",
-    "build:chrome": "DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
-    "watch:chrome": "DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
-    "build:firefox": "DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
-    "watch:firefox": "DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
+    "build": "npm run clean && npm run build:chrome && npm run build:firefox",
+    "clean": "rm -rf ./dist",
+    "build:chrome": "npm run clean && DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
+    "watch:chrome": "npm run clean && DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
+    "build:firefox": "npm run clean && DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
+    "watch:firefox": "npm run clean && DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "stylelint": "stylelint '**/*.css'",
@@ -42,17 +43,17 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.2",
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^12.0.2",
+    "babel-loader": "^10.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^6.10.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^15.9.0",
+    "globals": "^16.5.0",
     "html-webpack-plugin": "^5.6.5",
     "style-loader": "^4.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "webpack": "^5.104.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^6.0.1"
   }
 }
