--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "watch:firefox": "npm run clean && DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
+    "format": "prettier --write \"src/**/*.{js,jsx,css}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,css}\"",
     "stylelint": "stylelint '**/*.css'",
-    "stylelint:fix": "stylelint --fix '**/*.css'"
+    "stylelint:fix": "stylelint --fix '**/*.css'",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +48,10 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^16.1.1",
+    "@testing-library/user-event": "^14.5.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
@@ -50,6 +59,10 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
     "html-webpack-plugin": "^5.6.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.7.4",
     "style-loader": "^4.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard-scss": "^16.0.0",
