--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "webextension-polyfill": "^0.12.0"
   },
   "scripts": {
-    "build": "npm run clean && npm run build:chrome && npm run build:firefox",
-    "clean": "rm -rf ./dist",
-    "build:chrome": "npm run clean && DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
-    "watch:chrome": "npm run clean && DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
-    "build:firefox": "npm run clean && DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
-    "watch:firefox": "npm run clean && DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
+    "build": "rm -rf ./dist && npm run build:chrome && npm run build:firefox",
+    "build:chrome": "rm -rf ./dist/chrome && DIST_BROWSER=chrome NODE_ENV=production webpack --config webpack.config.js",
+    "watch:chrome": "rm -rf ./dist/chrome && DIST_BROWSER=chrome NODE_ENV=development webpack -w --config webpack.config.js",
+    "build:firefox": "rm -rf ./dist/firefox && DIST_BROWSER=firefox NODE_ENV=production webpack --config webpack.config.js",
+    "watch:firefox": "rm -rf ./dist/firefox && DIST_BROWSER=firefox NODE_ENV=development webpack -w --config webpack.config.js",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --write \"src/**/*.{js,jsx,css}\"",
@@ -24,6 +23,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "prepare": "husky"
   },
   "eslintConfig": {
@@ -49,6 +50,11 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.2",
+    "@storybook/addon-essentials": "^8.6.15",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
+    "@storybook/react": "^8.6.15",
+    "@storybook/react-webpack5": "^8.6.15",
+    "@storybook/test": "^8.6.15",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.1.1",
     "@testing-library/user-event": "^14.5.1",
@@ -65,6 +71,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.7.4",
+    "storybook": "^8.6.15",
     "style-loader": "^4.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard-scss": "^16.0.0",
