--- a/package.json
+++ b/package.json
@@ -50,11 +50,10 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.2",
-    "@storybook/addon-essentials": "^8.6.15",
-    "@storybook/addon-webpack5-compiler-babel": "^3.0.6",
-    "@storybook/react": "^8.6.15",
-    "@storybook/react-webpack5": "^8.6.15",
-    "@storybook/test": "^8.6.15",
+    "@storybook/addon-docs": "^10.2.0",
+    "@storybook/addon-webpack5-compiler-babel": "^4.0.0",
+    "@storybook/react": "^10.2.0",
+    "@storybook/react-webpack5": "^10.2.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.1.1",
     "@testing-library/user-event": "^14.5.1",
@@ -64,6 +63,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "10.2.0",
     "globals": "^16.5.0",
     "html-webpack-plugin": "^5.6.5",
     "husky": "^9.1.7",
@@ -71,7 +71,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.7.4",
-    "storybook": "^8.6.15",
+    "storybook": "^10.2.0",
     "style-loader": "^4.0.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard-scss": "^16.0.0",
